--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "node-red-contrib-weishaupt-wcmcom",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Custom node to get data from a Weishaupt WCM-COM module",
+  "homepage": "https://github.com/schmiegelt/node-red-contrib-weishaupt-wcmcom",
   "main": "wcm-com.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/schmiegelt/node-red-contrib-weishaupt-wcmcom.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,9 +20,12 @@
     }
   },
   "author": "Philip Schmiegelt",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "digest-fetch": "^1.2.1",
     "node-fetch": "^2.6.6"
-  }
+  },
+  "engines": {
+    "node": ">=12"
+}
 }
